# pyplexo

./: .dockerignore  .gitignore  .gitlab-ci.yml  Containerfile  Containerfile.pypy3.7  Containerfile.python3.7  Dockerfile  MANIFEST.in  Pipfile  README.md  build.py  main.py  mypy.ini  pre-build.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
domaintypesystem/: __init__.py  domaintypesystem.py
domaintypesystem/schema/: domain_type_group_membership.py  domain_type_group_message.capnp  domain_type_group_message.py
examples/: basic_handle_any.py  main.py  string_receive.py  string_send.py
examples/axon/inprocess/: json_send.py  pickle_send.py  str_send.py
examples/axon/tcp_pair/: json_respond_1.py  json_send_1.py  pickle_respond_1.py  pickle_send_1.py
examples/ganglion/inproc/: basic_send_receive.py  pickle_send_receive.py
examples/ganglion/multicast/: basic_receive.py  basic_send.py
examples/ganglion/plexo_multicast/: basic_receive.py  basic_send.py  pickle_receive.py  pickle_send.py
examples/plexus/: basic_send.py
examples/plexus/inprocess/: basic_send.py  json_send.py  pickle_send.py
examples/plexus/multicast/: basic_send.py  pickle_send.py
examples/plexus/tcp_pair/: basic_respond_1.py  basic_send_1.py  pickle_respond_1.py  pickle_send_1.py
examples/plexus/tcp_pubsub/: basic_respond_1.py  basic_send_1.py  pickle_respond_1.py  pickle_send_1.py
examples/synapse/zmq-epgm/: string_receive.py  string_send.py
src/domaintypesystem/: __init__.py  domain.py  domaintypesystem.py  dts.py  receptor.py  synapse.py  transmitter.py  types.py  typing.py
src/domaintypesystem/schema/: domain_type_group_membership.capnp
src/plexo/: __init__.py  axon.py  coder.py  dendrite.py  dts.py  exceptions.py  ganglion.py  host_information.py  ip_lease.py  multicast_group_proposal.py  multicastgroups.py  namespace.py  plexus.py  receptor.py  synapse.py  timer.py  transmitter.py  typing.py
src/plexo/codec/: capnpy_codec.py  json_codec.py  pickle_codec.py  plexo_codec.py  plexo_multicast_codec.py  string_codec.py
src/plexo/ganglion/: __init__.py  base.py  external.py  inproc.py  internal.py  multicast.py  plexo_multicast.py  tcp_pair.py  tcp_pubsub.py
src/plexo/namespace/: __init__.py  namespace.py
src/plexo/neuron/: neuron.py  plexo_multicast_neuron.py  plexo_neuron.py
src/plexo/schema/: __init__.py  plexo_heartbeat.capnp  plexo_message.capnp  plexo_preparation.capnp  plexo_promise.capnp
src/plexo/schema/plexo_multicast/: __init__.py  plexo_approval.capnp  plexo_proposal.capnp  plexo_rejection.capnp
src/plexo/synapse/: __init__.py  base.py  external.py  inproc.py  zeromq.py  zeromq_basic.py  zeromq_basic_pub.py  zeromq_plexopubsub_epgm.py  zeromq_pubsub_epgm.py
src/plexo/typing/: __init__.py  codec.py  ganglion.py  reactant.py  receptor.py  synapse.py  transmitter.py
tests/: __init__.py  test_integration_inproc.py  test_integration_inprocess.py  test_integration_ipc.py  test_integration_zmq_epgm.py  test_integration_zmq_ipc.py  test_receptor.py  test_synapse.py  test_transmitter.py
tests/integration/synapse/: test_integration_inproc.py  test_integration_zmq_epgm.py  test_integration_zmq_ipc.py
